noinst_PROGRAMS= phddns_cpp_demo
phddns_cpp_demo_SOURCES = common/base64.cpp common/bitstream.cpp common/blowfish.cpp common/coder.cpp common/generate.cpp common/log.cpp common/md5.cpp common/PHSocket.cpp main.cpp PHGlobal.cpp phupdate.cpp
INCLUDES=-I. 
EXTRA_DIST=PHGlobal.h phupdate.h common/bitstream.h common/blowfish.h common/coder.h common/generate.h common/global.h common/log.h common/lutil.h common/md5.h common/PHSocket.h
